<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/searchInputLayout"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"

        android:hint="@string/search"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/searchEditText"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:enabled="false"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton

        android:id="@+id/filterButton"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="16dp"

        android:text="@string/filter"

        android:enabled="false"

        app:layout_constraintTop_toBottomOf="@id/searchInputLayout"
        app:layout_constraintStart_toStartOf="parent"/>


    <androidx.recyclerview.widget.RecyclerView

        android:id="@+id/coursesRecyclerView"

        android:layout_width="0dp"
        android:layout_height="0dp"

        android:layout_marginTop="16dp"

        app:layout_constraintTop_toBottomOf="@id/filterButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ProgressBar

        android:id="@+id/loadingProgressBar"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:visibility="gone"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <TextView

        android:id="@+id/errorTextView"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/error_loading_courses"

        android:visibility="gone"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>